[package]
name = "hyper-async-std"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.4.0", features = ["attributes"] }
tower-service = "0.3.0"
hyper = { version = "0.13.1", default-features = false }
tokio-compat = { git = "https://github.com/leo-lb/tokio-compat.git", features = ["fut-io"] }
tokio = { version = "0.2.9", features = ["io-util"] }
http = "0.2.0"
futures-util = { version = "0.3.1", features = ["io"] }
pin-project = "0.4.6"
